src/assets/sass/clusters/_maker-details.sass
#maker-details
  .box
    color: $dark-turqoise
    background: $white

    &.left
      @extend .xlg-padding-top, .xxlg-padding-right, .xlg-padding-bottom, .xxlg-padding-left, %hidden-scroll

      h3,
      .brief
        @extend .text-center

    &.right
      @extend .lg-padding

      h6
        @extend %main-headings

      a
        text-decoration: underline
        word-wrap: break-word

      .item
        @extend .lg-padding-bottom
        font-style: italic
        font-size: 13px

    p
      font-size: 14px

  .back-link
    @extend .pull-left, .md-padding-top, .lg-padding-right, .md-padding-bottom, .lg-padding-left, %main-headings, %fast-transitions
    position: absolute
    left: 0
    top: $xlg-space
    background: $light-turqoise

    &:hover
      color: $white
      background: $dark-turqoise

  .brief
    font-style: italic

  .long
    @extend .no-padding-right, .no-padding-left
    border: 0
    background: transparent
    text-align: justify
    text-align-last: left
    font-family: inherit
    word-break: keep-all
    white-space: pre
    white-space: -moz-pre-wrap
    white-space: pre-wrap
    white-space: pre\9

  .long,
  .address
    @extend .xlg-padding-top

